--- a/css/main.css
+++ b/css/main.css
@@ -4,3 +4,5 @@
 h1, h2, h3 { font-family: Palatino, Georgia, serif }
 h2.movieTitle { font-style: italic }
 p { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif }
+a { text-decoration: none }
+a:hover { font-weight: bold; text-decoration: underline }
