--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 
 h1, h2, h3 { font-family: Palatino, Georgia, serif }
 h2.movieTitle { font-style: italic }
-p { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif }
+p, li { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif }
 a { text-decoration: none }
 a:hover { font-weight: bold; text-decoration: underline }
 img.poster { float: left; padding-right: 2em }
